syntax = "proto3";
option go_package = "/libwrity";

service WrityService {
    rpc Set(SetRequest) returns (SetResponse);
    rpc Get(GetRequest) returns (GetResponse);
}

message SetRequest{
    string Key = 1;
    string Value = 2;
}

message SetResponse{}

message GetRequest{
    string Key = 1;
}

message GetResponse{
    string Value = 1;
}
